--- a/SmartCity-AR/task2.html
+++ b/SmartCity-AR/task2.html
@@ -10,7 +10,7 @@
             <a-marker preset='hiro'>
                 <a-box position='0 0.5 0' material='opacity: 0.5; side: double;color:red;'>
                     <!-- add a torus in a red box --> 
-                    <a-cylinder position="1 0.75 -3" radius="0.5" height="1.5" color="#FFC65D" scale="120 120 120"></a-cylinder>
+                    <a-sky color="#ECECEC"></a-sky>
                 </a-box>
             </a-marker>
 
