--- a/SmartCity-AR/task2.html
+++ b/SmartCity-AR/task2.html
@@ -10,7 +10,7 @@
             <a-marker preset='hiro'>
                 <a-box position='0 0.5 0' material='opacity: 0.5; side: double;color:red;'>
                     <!-- add a torus in a red box --> 
-                    <a-sky color="#ECECEC"></a-sky>
+                    <a-sphere position="0 1.25 -5" radius="1.25" color="#EF2D5E"></a-sphere>
                 </a-box>
             </a-marker>
 
