--- a/SmartCity-AR/task2.html
+++ b/SmartCity-AR/task2.html
@@ -12,7 +12,7 @@
                     <!-- add a torus in a red box --> 
                     <a-sphere position="0 1.25 -5" radius="1.25" color="#EF2D5E"></a-sphere>
                 </a-box>
-				<a-text value="Hello, World!" geometry="primitive:plane"></a-text>
+				<a-text value="Hello, World!" geometry="primitive:plane" scale="120 120 120"></a-text>
             </a-marker>
 
             <!-- add a camera to the scene that renders the objects for us -->
