--- a/SmartCity-AR/task7.html
+++ b/SmartCity-AR/task7.html
@@ -1,23 +1,18 @@
 <!DOCTYPE html>
 <html>
-    <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
-    <!-- we import arjs version without NFT but with marker
-    + location based support -->
+    <script src="https://aframe.io/releases/1.0.0/aframe.min.js"></script>
+    <!-- we import arjs version without NFT but with marker + location based support -->
     <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
     <body style="margin : 0px; overflow: hidden;">
         <a-scene embedded arjs>
-            <a-assets>
-				<video id="vidi" autoplay loop="true" src="assets/crazyfrog.mp4"></video>
-            </a-assets>
-
-            <!-- handle hiro marker -->
-            <a-marker preset="hiro">
-                <!-- second entity: reference to the above video -->
-				<a-video src="#vidi" width="16" height="9" position="0 0 -20"></a-video>
-            </a-marker>
-
-            <!-- add a camera to the scene that renders the objects for us -->
-            <a-entity camera></a-entity>
+        <a-marker preset='custom' type='pattern' url='pattern-n.patt'>
+            <a-entity
+            position="0 -1 0"
+            scale="0.5 0.5 0.5"
+            gltf-model="https://arjs-cors-proxy.herokuapp.com/https://raw.githack.com/KhronosGroup/glTF-Sample-Models/master/2.0/RiggedFigure/glTF/RiggedFigure.gltf"
+            ></a-entity>
+        </a-marker>
+        <a-entity camera></a-entity>
         </a-scene>
     </body>
 </html>
