--- a/SmartCity-AR/task8.html
+++ b/SmartCity-AR/task8.html
@@ -1,23 +1,25 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
-    <!-- we import arjs version without NFT but with marker
-    + location based support -->
-    <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
-    <body style="margin : 0px; overflow: hidden;">
-        <a-scene embedded arjs>
-            <a-assets>
-				<video id="vidi" autoplay loop="true" src="assets/crazyfrog.mp4"></video>
-            </a-assets>
+    <script src="https://unpkg.com/aframe-look-at-component@0.8.0/dist/aframe-look-at-component.min.js"></script>
+    <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js"></script>
+  </head>
 
-            <!-- handle hiro marker -->
-            <a-marker preset="hiro">
-                <!-- second entity: reference to the above video -->
-				<a-video src="#vidi" width="16" height="9" position="0 0 -20"></a-video>
-            </a-marker>
-
-            <!-- add a camera to the scene that renders the objects for us -->
-            <a-entity camera></a-entity>
-        </a-scene>
-    </body>
+  <body style="margin: 0; overflow: hidden;">
+    <a-scene
+      vr-mode-ui="enabled: false"
+      embedded
+      arjs="sourceType: webcam; debugUIEnabled: false;"
+    >
+      <a-text
+        value="Smart City lab - Augmented Reality."
+        look-at="[gps-camera]"
+        scale="120 120 120"
+      ></a-text>
+      <a-camera gps-camera rotation-reader> </a-camera>
+    </a-scene>
+  </body>
 </html>
